@@ -1,32 +1,30 @@
 buildscript {
   ext {
-    springBootVersion = '2.1.3.RELEASE'
+    springBootVersion = '2.6.7'
   }
   repositories {
     jcenter()
   }
   dependencies {
     classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    classpath group: 'org.sonarsource.scanner.gradle', name: 'sonarqube-gradle-plugin', version: '2.6.2'
-    classpath("net.serenity-bdd:serenity-gradle-plugin:2.0.83")
-    classpath("net.serenity-bdd:serenity-single-page-report:2.1.4")
+    classpath("net.serenity-bdd:serenity-gradle-plugin:2.5.8")
   }
 }
 
 plugins {
   id 'application'
   id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-  id 'org.springframework.boot' version '2.3.4.RELEASE'
+  id 'org.springframework.boot' version '2.6.7'
   id 'uk.gov.hmcts.java' version '0.12.2'
   id 'com.github.ben-manes.versions' version '0.38.0'
   id 'com.gorylenko.gradle-git-properties' version '1.4.21'
-  id 'info.solidsoft.pitest' version '1.3.0'
+  id 'info.solidsoft.pitest' version '1.6.0'
   id 'jacoco'
-  id 'au.com.dius.pact' version '4.2.6'
+  id 'au.com.dius.pact' version '4.1.7' // do not change, otherwise serenity report fails
+  id 'org.sonarqube' version '3.3'
 }
 
 apply plugin: 'project-report'
-apply plugin: 'org.sonarqube'
 apply plugin: 'jacoco'
 apply plugin: 'net.serenity-bdd.aggregator'
 apply plugin: "com.gorylenko.gradle-git-properties"
@@ -40,8 +38,6 @@ targetCompatibility = 11
 
 mainClassName = 'uk.gov.hmcts.probate.BusinessRulesValidationApplication'
 
-ext['selenium.version']='3.8.1'
-
 jacoco {
   toolVersion = '0.8.2'
 }
@@ -54,7 +50,7 @@ sonarqube {
     property "sonar.host.url", "https://sonar.reform.hmcts.net/"
     property "sonar.pitest.mode", "reuseReport"
     property "sonar.pitest.reportsDirectory", "build/reports/pitest"
-    property "sonar.cpd.exclusions", "**/test/**," + "**/CallbackResponseTransformer.java"
+    property "sonar.cpd.exclusions", "**/test/**," + "**/CallbackResponseTransformer.java," + "**/ResponseCaseData.java," + "**/CaseData.java"
   }
 }
 
@@ -116,6 +112,11 @@ sourceSets {
   }
 }
 
+
+processContractTestResources {
+  duplicatesStrategy = DuplicatesStrategy.INCLUDE
+}
+
 task smoke(type: Test) {
   description = "Runs Smoke Tests"
   testClassesDirs = sourceSets.testSmoke.output.classesDirs
@@ -130,10 +131,6 @@ task functional(type: Test) {
 }
 
 functional.finalizedBy(aggregate)
-
-serenity {
-  reports = ["single-page-html"]
-}
 
 
 task caseCreator(type: Test) {
@@ -151,35 +148,37 @@ gitProperties {
 }
 
 def versions = [
-        springCloudStarterNetflixHystrix: '2.1.3.RELEASE',
-        serenity                        : '2.0.23',
-        serenityreporter                : '2.1.4',
-        springBootVersion               : '2.3.4.RELEASE',
-        springBootStarterHateoas        : '2.3.4.RELEASE',
+        springCloudStarterNetflixHystrix: '2.2.10.RELEASE',
+        serenity                        : '2.6.0',
+        serenityreporter                : '2.6.0',
+        springBootVersion               : '2.6.6',
+        springBootStarterHateoas        : '2.6.3',
         hmctsJavaLogging                : '5.1.7',
         authCheckerLib                  : '2.1.4',
-        jacksonDatabind                 : '2.11.2',
+        jacksonDatabind                 : '2.13.2',
         commonsIO                       : '2.8.0',
         commonsValidator                : '1.6',
-        restAssured                     : '3.0.7',
+        restAssured                     : '4.4.0',
         lombok                          : '1.18.16',
-        springfoxSwagger                : '3.0.0',
-        springSecurityVersion           : '5.3.5.RELEASE',
-        probateCommonsVersion           : '1.2.3',
+        springDocOpenUi                 : '1.6.6',
+        springSecurityVersion           : '5.6.1',
+        probateCommonsVersion           : '1.3.9',
         ccdClient                       : '4.7.5',
         mapStruct                       : '1.2.0.Final',
         serviceAuthVersion              : '3.0.0',
-        pact_version                    : '4.1.7',
+        pact_version                    : '4.1.34',
         probatePactCommonsVersion       : '1.0.2',
-        elasticSearchVersion            : '7.13.4'
+        springCloud                     : '3.1.1',
+        junit_jupiter                   : '5.8.0-M1',
+        elasticSearchVersion            : '7.15.0'
 ]
 
 jacocoTestReport {
   executionData(test)
   reports {
-    xml.enabled = true
-    csv.enabled = false
-    xml.destination = file("${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml")
+    xml.required = true
+    csv.required = false
+    xml.outputLocation = file("${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml")
   }
 }
 
@@ -200,42 +199,17 @@ processResources {
 }
 
 dependencyManagement {
+  imports {
+    mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.1"
+  }
   dependencies {
-    //CVE-2020-26939
-    dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.67'
-
-    //CVE-2020-15250
-    dependency group: 'junit', name: 'junit', version: '4.13.2'
-    
-    // dependency group: 'junit', name: 'junit-bom', version: '5.7.0'
-
     //CVE-2021-22112
-    dependencySet(group: 'org.springframework.security', version: '5.3.9.RELEASE') {
+    dependencySet(group: 'org.springframework.security', version: '5.6.1') {
       entry 'spring-security-config'
       entry 'spring-security-core'
       entry 'spring-security-crypto'
       entry 'spring-security-web'
     }
-
-    //CVE-2021-22118
-    dependencySet(group: 'org.springframework', version: '5.2.9.RELEASE') {
-      entry 'spring-aop'
-      entry 'spring-aspects'
-      entry 'spring-beans'
-      entry 'spring-context'
-      entry 'spring-core'
-      entry 'spring-expression'
-      entry 'spring-jcl'
-      entry 'spring-jdbc'
-      entry 'spring-orm'
-      entry 'spring-oxm'
-      entry 'spring-tx'
-      entry 'spring-web'
-      entry 'spring-webmvc'
-    }
-
-    //CVE-2021-27568
-    dependency group: 'json-smart', name: 'json-smart', version: '2.3'
   }
 }
 
@@ -243,10 +217,13 @@ configurations.all {
   resolutionStrategy {
     eachDependency { DependencyResolveDetails details ->
       if (details.requested.group in ['org.apache.tomcat.embed']) {
-        details.useVersion '9.0.50'
+        details.useVersion '9.0.58'
       }
       if (details.requested.group in ['org.hibernate']) {
-        details.useVersion '5.4.25.Final'
+        details.useVersion '5.6.5.Final'
+      }
+      if (details.requested.group in ['org.apache.logging.log4j']) {
+        details.useVersion '2.17.1'
       }
     }
   }
@@ -260,6 +237,7 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: versions.springBootVersion
   implementation group: 'org.springframework.retry', name: 'spring-retry', version: '1.2.4.RELEASE'
   implementation group: 'com.github.hmcts', name: 'probate-commons', version: versions.probateCommonsVersion
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: versions.springCloud
 
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: versions.springCloudStarterNetflixHystrix
   implementation ('io.github.openfeign.form:feign-form-spring:3.8.0') {
@@ -276,16 +254,16 @@ dependencies {
   implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.serviceAuthVersion
   implementation group: 'com.github.hmcts', name: 'cmc-pdf-service-client', version: '6.0.0'
   implementation group: 'uk.gov.hmcts.reform', name: 'send-letter-client', version: '2.5.0'
-  implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
-  implementation group: 'com.github.hmcts', name: 'life-events-client', version: '0.0.7'
+  implementation group: 'com.github.hmcts', name: 'life-events-client', version: '0.0.9'
 
-  implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.8'
+  implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: versions.jacksonDatabind
   implementation group: 'commons-io', name: 'commons-io', version: versions.commonsIO
   implementation group: 'commons-validator', name: 'commons-validator', version: versions.commonsValidator
-  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jacksonDatabind
-  implementation group: 'io.springfox', name: 'springfox-boot-starter', version: versions.springfoxSwagger
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2.1'
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDocOpenUi
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-security', version: versions.springDocOpenUi
   implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
-  compileOnly group:'org.projectlombok', name: 'lombok', version: versions.lombok
+  implementation group:'org.projectlombok', name: 'lombok', version: versions.lombok
   annotationProcessor group:'org.projectlombok', name:'lombok', version: versions.lombok
   implementation group: 'org.projectlombok', name: 'lombok-mapstruct-binding', version: '0.1.0'
 
@@ -305,11 +283,11 @@ dependencies {
 
   implementation group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: versions.ccdClient
   implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
-  implementation ('org.postgresql:postgresql:42.2.18') {
+  implementation ('org.postgresql:postgresql:42.3.3') {
     exclude module: 'slf4j-simple'
   }
   implementation group: 'org.mapstruct', name: 'mapstruct-jdk8', version: versions.mapStruct
-  compileOnly group: 'org.mapstruct', name: 'mapstruct-processor', version: versions.mapStruct
+  implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: versions.mapStruct
   annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: versions.mapStruct
 
   testImplementation group: 'com.github.hmcts', name: 'probate-commons', version: versions.probateCommonsVersion
@@ -327,7 +305,9 @@ dependencies {
   testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
   testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.27.1'
   testImplementation 'org.awaitility:awaitility:4.1.0'
-  
+  testImplementation 'com.github.hmcts:fortify-client:1.2.2:all'
+  testImplementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: versions.jacksonDatabind
+
   testSmokeImplementation group: 'io.rest-assured', name: 'rest-assured', version: versions.restAssured
   testSmokeImplementation sourceSets.main.runtimeClasspath
   testSmokeImplementation sourceSets.test.runtimeClasspath
@@ -336,7 +316,6 @@ dependencies {
   testFunctionalImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
   testFunctionalImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
   testFunctionalImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
-  testFunctionalImplementation group: 'net.serenity-bdd', name: 'serenity-single-page-report', version: versions.serenityreporter
   testFunctionalImplementation group: 'org.awaitility', name: 'awaitility', version: '3.1.6'
   testFunctionalImplementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
   testFunctionalImplementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.serviceAuthVersion
@@ -361,12 +340,11 @@ dependencies {
   testCaseCreatorAnnotationProcessor group:'org.projectlombok', name: 'lombok', version: versions.lombok
   testCaseCreatorCompileOnly group:'org.projectlombok', name: 'lombok', version: versions.lombok
 
-  contractTestImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0'
+  contractTestImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2.1'
   contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact_version
   contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
   contractTestRuntimeOnly group: 'au.com.dius.pact.consumer', name: 'java8',  version: versions.pact_version
   contractTestRuntimeOnly group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
-  contractTestImplementation("org.junit.jupiter:junit-jupiter-api:5.7.1")
   contractTestRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.1")
   contractTestImplementation('org.junit.jupiter:junit-jupiter-api:5.7.1')
   contractTestRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-commons', version: '1.7.0'
@@ -382,7 +360,7 @@ dependencies {
 }
 
 tasks.withType(JavaCompile) {
-  options.compilerArgs << '-parameters'  
+  options.compilerArgs << '-parameters'
 }
 
 bootJar {
@@ -420,13 +398,25 @@ task runAndPublishConsumerPactTests(type: Test){
 
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
+task highLevelDataSetup(type: JavaExec) {
+  onlyIf {
+    return false
+  }
+}
+
 test {
   maxHeapSize = "1024m"
 }
 
 runAndPublishConsumerPactTests.finalizedBy pactPublish
 
-def getCheckedOutGitCommitHash() {
+static def getCheckedOutGitCommitHash() {
   'git rev-parse --verify --short HEAD'.execute().text.trim()
 }
 
